--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "scan-md",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "CLI tool for scanning markdown files and generating structured output",
   "main": "dist/cli.js",
   "bin": {
     "scan-md": "dist/cli.js"
   },
-  "type": "module",
   "scripts": {
-    "build": "esbuild src/cli.ts --bundle --platform=node --format=esm --outfile=dist/cli.js",
+    "build": "esbuild src/cli.ts --bundle --platform=node --format=cjs --outfile=dist/cli.js",
     "start": "tsx src/cli.ts",
     "test": "vitest run",
+    "test:e2e": "vitest run test/e2e/cli.test.ts",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage"
   },
